# QuMail

./: .dockerignore  .gitignore  README.md  backend_logs.txt  backend_logs_utf8.txt  bob_error.txt  bob_final_check.txt  bob_startup.txt  bob_startup_2.txt  build_km.txt  docker-compose.prod.yml  docker-compose.yml  environment.yml  km_logs.txt  km_logs_utf8.txt  test_csprng.py  test_hang.py
backend/: .env.example  Dockerfile  Dockerfile.prod  config.py  debug_entropy.py  main.py  pqc_test_output.txt  pyproject.toml  repro_diag.py  requirements.txt  test_db.py  test_lock.py  test_output.txt  test_ping.py  test_qkd.py  verify_encryption_flow.py
backend/accounts/: __init__.py  manager.py
backend/api/: __init__.py  accounts.py  auth.py  chat.py  dependencies.py  diagnostics.py  emails.py  security.py  settings.py
backend/crypto_engine/: __init__.py  aes_gcm.py  integrity.py  key_derivation.py  otp.py  pqc.py  quantum_sim.py  secure_random.py
backend/email_service/: __init__.py  imap_handler.py  mime_builder.py  mime_parser.py  oauth2.py  smtp_handler.py
backend/extensions/: __init__.py  ai_sentinel.py  base.py  chat.py  voice.py
backend/key_store/: __init__.py  encrypted_store.py  lifecycle.py  memory_store.py
backend/policy_engine/: __init__.py  fallback.py  rules.py  validator.py
backend/qkd_client/: __init__.py  client.py  exceptions.py  models.py
backend/storage/: __init__.py  database.py
backend/tests/: conftest.py  test_aes_gcm.py  test_api_routes.py  test_chat_logic.py  test_crypto_fix.py  test_distributed_qkd.py  test_otp.py  (+10 more)
key_manager/: Dockerfile  config.py  main.py  pyproject.toml  test_imports.py
(+83 files in other folders)
