[project]
name = "qumail-key-manager"
version = "1.0.0"
description = "Simulated QKD Key Manager (ETSI GS QKD 014)"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "fastapi>=0.109.0",
    "uvicorn[standard]>=0.27.0",
    "pydantic>=2.5.0",
    "pydantic-settings>=2.1.0",
]

[tool.black]
line-length = 100
target-version = ["py311"]
